--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,103 @@
 @import "tailwindcss";
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 
-.astro{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 1.5rem;
+
+/*navbar*/
+
+.no-underline {
+    text-decoration: none !important;
+    }
+
+/*contacto*/
+.text-yellow{
+    color: rgb(243, 237, 134);
+}
+/*card*/
+
+.item-card {
+    height: 450px;
 }
 
+.item-card {
+    min-height: 450px; 
+}
+
+.item-card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.item-card-button-container {
+    margin-top: auto;
+}
+
+.item-card-description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+/*CAROUSEL*/
+.swiper-pagination-bullet {
+    width: 8px;
+    height: 8px;
+    background-color: #ccc;
+    opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: #0071dc;
+}
+
+.w-full.h-50.relative.mt-10.z-10 {
+    margin-top: 20px; 
+}
+
+/*CARD´S*/
+.custom-card {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+.custom-card:hover {
+    transform: translateY(-5px);
+}
+
+.item-title {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.item-category {
+    font-size: 0.9rem;
+    color: #666;
+    margin-bottom: 10px;
+}
+
+.item-description {
+    font-size: 1rem;
+    color: #333;
+    margin-bottom: 15px;
+    height: 80px; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/*buttons*/
+.see-more-button {
+    background-color: #007bff;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 5px;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+}
+
+.see-more-button:hover {
+    background-color: #0056b3;
+}
