--- a/src/App.css
+++ b/src/App.css
@@ -95,9 +95,180 @@
     padding: 8px 16px;
     border-radius: 5px;
     font-size: 1rem;
+    margin-right: 1rem;
     transition: background-color 0.3s ease;
 }
 
 .see-more-button:hover {
     background-color: #0056b3;
+}
+
+/*Estilo Carrito*/
+.cartIconContainer {
+    position: relative;
+    cursor: pointer;
+}
+
+.cartBadge {
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 0.75rem;
+}
+
+.cartDropdown {
+    position: absolute;
+    top: 50px; 
+    right: 0;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    z-index: 10;
+    width: 300px; 
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+}
+
+.cartDropdown button {
+    
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.cartDropdown button:hover {
+    background-color: #0056b3;
+}
+
+
+.cartDropdown.entering,
+.cartDropdown.entered {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.cartDropdown.exiting,
+.cartDropdown.exited {
+    opacity: 0;
+    transform: translateY(-10px);
+}
+
+/*ESTILO CART*/
+.emptyCart {
+    text-align: center;
+    padding: 1rem;
+    color: #030101;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+}
+
+.backToShop {
+    color: #222;
+    text-decoration: none;
+    background-color: #2c65ff;
+    border-radius: 1rem;
+    text-decoration: none;
+}
+
+.backToShop:hover {
+    text-decoration: underline;
+}
+
+.cartTitle {
+    font-size: 1.5rem;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #0056b3;
+    margin-bottom: 1rem;
+}
+
+.cartItemsList {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.cartTotal {
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 1rem;
+    text-align: right;
+    color: #030101;
+}
+
+.checkoutButton {
+    display: block;
+    background-color: #28a745;
+    color: white;
+    text-align: center;
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+    text-decoration: none;
+    margin-top: 1rem;
+}
+
+.checkoutButton:hover {
+    background-color: #218838;
+}
+
+/*ESTILOS CARTITEMS*/
+.cartItem {
+    border-bottom: 1px solid #eee;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.itemDetails {
+    flex-grow: 1;
+    color: #030101;
+}
+
+.itemName {
+    font-weight: bold;
+    margin-bottom: 0.25rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #030101;
+}
+
+.itemQuantity,
+.itemPrice {
+    font-size: 0.875rem;
+    color: #020101;
+    margin: 0;
+}
+
+/*ESTILOS CHECKOUT*/
+.resumen-title-checkout{
+    font-size: x-large;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 2;
+    color: #0056b3;
+}
+
+.item-id-checkout{
+    display: flex;
+    text-align: justify;
+    align-items: center;
+    padding: 2;
+    color: #020101;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+.item-name-checkout{
+    color: #030101;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
